# course-review-nlp

./: .gitignore  README.md  pyproject.toml  run_pipeline.py  train.py
.streamlit/: config.toml
data/labels/: annotations.json  chunk_0.json  chunk_1.json  chunk_10.json  chunk_11.json  chunk_12.json  chunk_13.json  chunk_14.json  chunk_15.json  chunk_16.json  chunk_17.json  chunk_18.json  chunk_19.json  chunk_2.json  chunk_3.json  chunk_4.json  chunk_5.json  chunk_6.json  chunk_7.json  chunk_8.json  chunk_9.json  new_annotations.json  unified_annotations.json
data/processed/: baseline_scores.parquet  evaluation_results.json  finetuned_scores.parquet  labeled_scores.parquet  reviews.parquet  teachers.parquet  teachers_all.parquet  test.parquet  to_label.parquet  train.parquet  val.parquet  zero_shot_scores.parquet
docs/: project-report.md
docs/superpowers/plans/: 2026-04-08-course-review-analyzer.md
docs/superpowers/specs/: 2026-04-08-course-review-analyzer-design.md
src/app/: streamlit_app.py
src/models/: baseline.py  evaluate.py  fine_tune.py  labeling.py  process.py  zero_shot.py
src/recommend/: engine.py
src/scraper/: client.py  parse.py  preprocess.py  run.py
tests/: test_models.py  test_recommend.py  test_scraper.py
