[project]
name = "course-review"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pandas>=2.2",
    "pyarrow>=15.0",
    "torch>=2.2",
    "transformers>=4.40",
    "scikit-learn>=1.4",
    "streamlit>=1.33",
    "plotly>=5.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ipykernel>=6.29",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
